--- a/BookStore/Views/Account/Register.cshtml
+++ b/BookStore/Views/Account/Register.cshtml
@@ -1,75 +1,76 @@
-﻿@model BookStore.DO.Entities.User
-
+﻿@model BookStore.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    List<SelectListItem> list = new List<SelectListItem>(){ new SelectListItem() { Text = "Male" }, new SelectListItem() { Text = "Female" } };
 }
-
-<h2>Register</h2>
-
+<script src="~/scripts/save-image.js"></script>
+@Scripts.Render("~/bundles/jqueryval")
 <div>
-    <h4>User</h4>
-    <hr />
-    @using(Html.BeginForm())
-    { 
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.EditorFor(model => model.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.First_Name)
-        </dt>
-
-        <dd>
-            @Html.EditorFor(model => model.First_Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Last_Name)
-        </dt>
-
-        <dd>
-            @Html.EditorFor(model => model.Last_Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Birthday)
-        </dt>
-
-        <dd>
-            @Html.EditorFor(model => model.Birthday)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-
-        <dd>
-            @Html.EditorFor(model => model.Password)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Avatar_Url)
-        </dt>
-
-        <dd>
-            @Html.EditorFor(model => model.Avatar_Url)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Sex)
-        </dt>
-
-        <dd>
-            @Html.EditorFor(model => model.Sex)
-        </dd>
-    </dl>
-    <input type="submit" value="Save" />
+  
+    @using (Html.BeginForm())
+    {
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                    <form role="form">
+                        <h2>Регистрация<small>It's free and always will be.</small></h2>
+                        <hr class="colorgraph">
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <div class="form-group">
+                                    @Html.EditorFor(x=>x.First_Name,new{htmlAttributes=new{@class="form-control input-lg", placeholder="First Name", tabindex="1"}})
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <div class="form-group">
+                                    @Html.EditorFor(x => x.Last_Name, new { htmlAttributes = new { @class = "form-control input-lg", placeholder = "Last Name", tabindex = "2" } })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.EditorFor(x => x.Email, new { htmlAttributes = new { @class = "form-control input-lg",id="Email", placeholder = "Email", tabindex = "3" } })
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <div class="form-group">
+                                    @Html.EditorFor(x => x.Password, new {htmlAttributes = new {@class = "form-control input-lg", placeholder = "Password", tabindex = "4"}})
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <div class="form-group">
+                                    @Html.EditorFor(x => x.ConfirmPassword, new {htmlAttributes = new {@class = "form-control input-lg", placeholder = "Confirm", tabindex = "5"}})
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <div class="form-group">
+                                    @Html.EditorFor(x => x.Birthday, new {htmlAttributes = new {@class = "form-control input-lg", placeholder = "Last Name", tabindex = "6"}})
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <div class="form-group">
+                                    @Html.DropDownListFor(x => x.Sex, list, new {@class = "form-control input-lg", placeholder = "Last Name", tabindex = "7"})
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.HiddenFor(x => x.Avatar_Url, new { @class = "form-control input-lg",id="Avatar", tabindex = "8"  })
+                        </div>
+                        <div class="form-group">
+                            <input type="file" class="form-control input-lg" id="AvatarFile" value="" />
+                        </div>
+                       
+                        <hr class="colorgraph">
+                        <div class="row">
+                            <div class="col-xs-6 col-md-6"><input type="submit" value="Register" class="btn btn-primary btn-block btn-lg" tabindex="10"></div>
+                            <div class="col-xs-6 col-md-6"><a href="@Url.Action("Login","Account")" class="btn btn-success btn-block btn-lg">Sign In</a></div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     }
 </div>
 
