--- a/BookStore/Views/User/Profile.cshtml
+++ b/BookStore/Views/User/Profile.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <div class="container-fluid user ">
     <div class="row ">
         <div class="col-md-8 col-lg-8 ">
@@ -14,7 +15,7 @@
                 <p>@Model.Email</p>
             </div>
         </div>
-        <div class="col-md-4 col-lg-4 ">
+        <div class="col-md-4 col-lg-4 avatar">
             <img src="@Url.Content(Model.Avatar_Url)" alt="Avatar" />
         </div>
     </div>
