--- a/BookStore/Views/Account/Ajax.cshtml
+++ b/BookStore/Views/Account/Ajax.cshtml
@@ -8,7 +8,7 @@
                 <h3 id="myModalLabel">Login</h3>
             </div>
             <div class="modal-body">
-                @using (Html.BeginForm("Ajax", "Login", FormMethod.Post, new { @class = "form-horizontal", id = "LoginForm" }))
+                @using (Html.BeginForm("Ajax", "Account", FormMethod.Post, new { @class = "form-horizontal", id = "LoginForm" }))
                 {
                     <div class="control-group">
                         <label class="control-label" for="Email">
