--- a/BookStore/Views/Nav/Menu.cshtml
+++ b/BookStore/Views/Nav/Menu.cshtml
@@ -2,9 +2,10 @@
 <div class="accordion" id="accordion2">
     <div class="accordion-group">
         <div class="accordion-heading">
-            <a class="accordion-toggle"  data-toggle="collapse" data-parent="#accordion2" href="#genres">
-                Жанры
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#genres">
+                +
             </a>
+            <a>Художественная литература </a>
         </div>
         <div id="genres" class="accordion-body collapse">
             <div class="accordion-inner">
