--- a/BookStore/Views/Admin/FindImage.cshtml
+++ b/BookStore/Views/Admin/FindImage.cshtml
@@ -9,13 +9,11 @@
     int Id = (int) ViewData["ID"];
     string types = ((BookStore.Models.TypeSearch)ViewData["Type"]).ToString();
 }
-<h2>Finded Images</h2>
+<h2>Найденные изображения</h2>
 @foreach (var result in @Model)
 {
     <span class="search">
-        @*@Ajax.ImageActionLink("SaveBookImage", result, (int)ViewData["BookID"],
-        new AjaxOptions { UpdateTargetId = "edit", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })*@
-       <img src="@result" alt="Finded book's cover" onclick="return saveImage($(this),@Id,'@types')" class=" bookcover" /> 
+       <img src="@result" alt="Found book's cover" onclick="return saveImage($(this),@Id,'@types')" class=" bookcover" /> 
     </span>
 }
 
