--- a/BookStore/Views/Book/BookRating.cshtml
+++ b/BookStore/Views/Book/BookRating.cshtml
@@ -10,11 +10,11 @@
         id = @Model.Book.Book_ID;
     }
 }
-@if (Model.IsSuggestion==true)
+@if (Model.IsSuggestion)
 {
     rate = 0;
     <p>Возможно, Вы оцените книгу на: @Model.RateValue.ToString("F")</p>
 }
 <p>Моя оценка:</p>
 <input id="input-23" value=@rate bookid=@id
-       type="number" class="rating" size='sm' min=0 max=10 step=1 data-size="sm" data-stars=10 data-rtl="false">
+       type="number" class="rating" size="sm" min=0 max=10 step=1 data-size="sm" data-stars=10 data-rtl="false">
