--- a/BookStore/Views/Book/Comment.cshtml
+++ b/BookStore/Views/Book/Comment.cshtml
@@ -6,6 +6,6 @@
     @Html.HiddenFor(x=>x.User_ID)
     @Html.HiddenFor(x=>x.DataCreate)
     @Html.TextAreaFor(x => x.Context, new {  @class="form-control", rows="4", placeholder="Your comments" });
-    <input type="submit" class="btn btn-default" value="Add"/>
+    <input type="submit" id="AddComment" class="btn btn-default" value="Add"/>
 }
 
